0.9 (2012-05-03)
----------------

- Add a test for uncode encoding in multipart messages.

- Depend on ``repoze.sendmail`` >= 3.2 (fixes unicode multipart message
  encoding).

0.8 (2012-03-26)
----------------

- Work around a Python 3.2.0 bug in handling emails with empty headers.  This
  allows cc-only and bcc-only emails to be handled properly on all platforms
  (no recipient= required anymore).  See
  https://github.com/Pylons/pyramid_mailer/issues/14.

0.7 (2012-03-26)
----------------

- Packaging release

0.6 (2012-03-20)
----------------

- Python 2.5, 2.6, 2.7, 3.2, and pypy compatibility.

- Remove explicit Jython support.  It may work, but we no longer test it
  using automated testing.

- Requires repoze.sendmail 3.0+.

- More descriptive exception raised when attempting to send cc-only or
  bcc-only messages.  See https://github.com/Pylons/pyramid_mailer/issues/14

0.6 (2012-01-22)
----------------

- Use ',' as an email header field separator rather than ';' when multiple
  values are in the same header (as per RFC822).

- Allow lists of recipient emails to be tuples or lists (previously it was
  just lists).

- Don't include ``Bcc`` header in mail messages (breaks secrecy of BCC).
  See https://github.com/Pylons/pyramid_mailer/pull/10

0.5.1 (2011-11-13)
------------------

- Fixed a bug where the mailer was only sending email to addresses in
  the "TO" field.

0.5 (2011-10-24)
----------------

- Drop Lamson dependency by copying Lamson's MailResponse and dependent code
  into ``pyramid_mailer.response``.

0.4.X
-----

- ``pyramid_mailer.includeme`` function added for
  ``config.include('pyramid_mailer')`` support

- ``pyramid_mailer.testing`` module added for
  ``config.include('pyramid_mailer.testing')`` support.

- ``pyramid_mailer.get_mailer`` API added (see docs).

- ``pyramid_mailer.interfaces`` module readded (with marker IMailer interface
  for ZCA registration).

- ``setup.cfg`` added with coverage parameters to allow for ``setup.py