@@ -1,7 +1,14 @@
+[easy_install]
+zip_ok = false
+
 [nosetests]
 match=^test
 where=pyramid_mailer
 nocapture=1
 cover-package=pyramid_mailer
 cover-erase=1
+
+[aliases]
+dev = develop easy_install pyramid_mailer[testing]
+docs = develop easy_install pyramid_mailer[docs]
 
