@@ -1,32 +1,28 @@
 [tox]
 envlist = 
-    py25,py26,py27,py32,pypy,cover
+    py25,py26,py27,py32,py33,pypy,cover
 
 [testenv]
 commands = 
+    python setup.py dev
     python setup.py test -q
-deps =
-    repoze.sendmail>=3.2dev
 
 [testenv:py25]
 commands = 
+    python setup.py dev
     python setup.py test -q
 deps =
-    repoze.sendmail>=3.2dev
     https://github.com/Pylons/webob/zipball/1.1-branch
     https://github.com/Pylons/pyramid/zipball/1.2-branch
+    zope.interface <= 3.999
+    zope.component <= 3.999
 
 [testenv:cover]
 basepython =
     python2.6
 commands = 
+    python setup.py dev
     python setup.py nosetests --with-xunit --with-xcoverage
 deps =
-    repoze.sendmail>=3.2dev
-    coverage
     nosexcover
 
-# we separate coverage into its own testenv because a) "last run wins" wrt
-# cobertura jenkins reporting and b) pypy and jython can't handle any
-# combination of versions of coverage and nosexcover that i can find.
-# coverage==3.4 is required by nosexcover.
